@@ -1,5 +1,12 @@
 2009-07-28  Adam Endrodi  <adam.endrodi@blumsoft.eu>
 
+	* matchbox/core/mb-wm-util.c (error_handler):
+	  Gift to those who know the cheat code: print symbolic names
+	  of X errors and requests, so perhaps there'll be more motivation
+	  to track them down.
+
+2009-07-28  Adam Endrodi  <adam.endrodi@blumsoft.eu>
+
 	* matchbox/core/mb-wm-client-window.c
 	  (mb_wm_client_window_sync_properties):
 	  Blogged about the monster hack.
